[package]
name = "units-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = "4.1.3"
sha2 = "0.10.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"], optional = true }
rocksdb = { version = "0.21.0", optional = true }
chrono = "0.4"
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["sqlite"]
sqlite = ["dep:sqlx", "dep:tokio"]
rocksdb = ["dep:rocksdb"]
