[package]
name = "units-storage"
version = "0.1.0"
edition = "2021"
description = "Storage implementations for Universal Information Tokenization System (UNITS)"
license = "MIT"
repository = "https://github.com/abisshekk92/units-storage"
readme = "README.md"
keywords = ["storage", "database", "units", "tokenization"]
categories = ["database-implementations", "cryptography"]

[dependencies]
curve25519-dalek = "4.1.3"
sha2 = "0.10.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"], optional = true }
rocksdb = { version = "0.23.0", optional = true }
chrono = { version = "0.4.31", features = ["clock"] }
tokio = { version = "1", features = ["full"], optional = true }
blake3 = "1.6.1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["sqlite"]
sqlite = ["dep:sqlx", "dep:tokio"]
rocksdb = ["dep:rocksdb"]
all = ["sqlite", "rocksdb"]
