[workspace]
resolver = "2"
members = [
    "units-core",
    "units-proofs",
    "units-storage-impl",
    "units-runtime",
    "units",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/abisshekk92/units-storage"
readme = "README.md"

[workspace.dependencies]
curve25519-dalek = "4.1.3"
sha2 = "0.10.8"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
rocksdb = "0.23.0"
chrono = { version = "0.4.31", features = ["clock"] }
tokio = { version = "1", features = ["full"] }
blake3 = "1.6.1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
tempfile = "3.8"
hex = "0.4.3"

# Internal crates
units-core = { path = "./units-core" }
units-proofs = { path = "./units-proofs" }
units-storage-impl = { path = "./units-storage-impl" }
units-runtime = { path = "./units-runtime" }
